Bug 966814 - Build with disabled X11 on linux failing to compile. r=ted